# beaver-lang

./: .gitignore  .hidden  .indent.pro  CMakeLists.txt  Doxyfile  README.md  doxygen_filter.ml
Core/: main.c
Include/: def.h  errors.h  libs.h  mathematics.h  modules.h  string.h  types.h
Libs/: errors.c  mathematics.c  mathematics.h  types.c
Modules/String/: string.c  string.h
Modules/Vector/: vector.c  vector.h
